# vulkan_raytracing_from_scratch

./: .clang-format  .gitignore  00_base_code.cpp  01_instance_and_device.cpp  02_create_storage_image.cpp  03_create_vertex_buffer.cpp  04_create_bottom_level_as.cpp  05_build_bottom_level_as.cpp  06_create_top_level_as.cpp  08_create_shader_binding_table.cpp  09_ccreate_descriptor_sets.cpp  10_build_command_buffers.cpp  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  vcpkg.json  vkutils.hpp
code/: 00_base_code.hpp  01_skip_base_setup.cpp  01_skip_base_setup.hpp  02_create_storage_image.cpp  02_create_storage_image.hpp  02_create_swapchain.hpp  03_create_buffer.hpp  03_create_vertex_buffer.cpp  03_create_vertex_buffer.hpp  04_create_bottom_level_as.cpp  04_create_bottom_level_as.hpp  05_build_bottom_level_as.cpp  05_build_bottom_level_as.hpp  05_create_top_level_as.hpp  06_create_ray_tracing_pipeline.hpp  06_create_shader.hpp  06_create_top_level_as.cpp  06_create_top_level_as.hpp  07_create_descriptor.hpp  07_create_ray_tracing_pipeline.cpp  07_create_ray_tracing_pipeline.hpp  07_create_shader_binding_table.hpp  08_create_pipeline.hpp  08_create_shader_binding_table.cpp  08_create_shader_binding_table.hpp  09_create_descriptor_sets.cpp  09_create_descriptor_sets.hpp  09_create_sbt.hpp  10_build_command_buffers.cpp  10_build_command_buffers.hpp  10_draw_triangle.hpp  11_create_sync_objects.cpp  11_create_sync_objects.hpp  11_hello_triangle.hpp  12_hello_triangle.cpp  12_hello_triangle.hpp  main.cpp  vkutils.hpp
shaders/: closesthit.rchit  compile.bat  (+5 more)
